--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
       <button id="search-btn">検索</button>
       <button id="reset-btn">リセット</button>
       <original-text id="no-hit"></original-text>
+      <a href="./katamuki-math.html">かたむきマス（テスト）</a>
     </div>
     <script src="js/counter.js"></script>
     <script src="js/search.js"></script>
     <script src="js/reset.js"></script>
   </body>
 </html>
+
