--- a/katamuki-math.html
+++ b/katamuki-math.html
@@ -10,9 +10,13 @@
       window.addEventListener("deviceorientation", deviceorientationHandler);
       function deviceorientationHandler(event) {
         const beta = event.beta;
+        console.log(beta);
         const gamma = event.gamma;
+        console.log(gamma);
         const alpha = event.alpha;
+        console.log(alpha);
       }
     </script>
   </body>
 </html>
+
